# quill-delta-rs

./: .gitignore  Cargo.toml  Readme.md  dprint.json  why.md
.github/workflows/: doc.yml
diffs/: Cargo.toml
diffs/src/: diff_test.rs  lib.rs  myers.rs  patience.rs  replace.rs
proto/: delta.proto
src/: attributes.rs  delta.rs  document.rs  error.rs  iterator.rs  lib.rs  operations.rs  optransform.rs  types.rs  utils.rs
src/types/: attr_map.rs  attr_val.rs  ops_kind.rs
tests/: diff_myers_test.rs  tests.rs
tests/delta/: builder.rs  compose.rs  diff.rs  helpers.rs  invert.rs  transform.rs  transform_position.rs
tests/serialize_json/: from_json.rs  to_json.rs
